# CPAN-Maker

./: .gitignore  CPAN-Maker-1.7.1-ReleaseNotes.md  ChangeLog  Makefile  Makefile.am  README.md.in  TODO  build-apt-deps  build-github  build-requires  builder  buildspec-specfile.yml  buildspec.yml  configure.ac  cpanfile  deps.mk  perlcriticrc  project.mk  recommends  release-notes-1.7.2.md  release-notes-1.7.4.md  release-notes-1.7.5.md  release-notes-1.8.0.md  release-notes-1.8.5.md  release-notes.md  requires  requires.skip  test-requires
.github/workflows/: build.yml
.includes/: update.mk
cpan/: Makefile.am  buildspec.yml
lib/CPAN/: Maker.pm.in
lib/CPAN/Maker/: Utils.pm.in
lib/CPAN/Maker/Role/: FileUtils.pm.in
lib/File/: Process.pm.in
lib/File/Process/: Utils.pm.in
release/: release-notes-1.7.3.md  release-notes-1.8.1.md  release-notes-1.8.3.md  release-notes-1.9.0.md
release-notes/: release-notes-1.9.2.md  release-notes-1.9.3.md  release-notes-2.0.0.md  release-notes-2.0.1.md  release-notes-2.0.2.md  release-notes-2.0.3.md  release-notes-2.0.5.md
src/main/perl/lib/: Makefile.am  README.md
src/main/perl/lib/CPAN/: Maker.pm.in
src/main/perl/lib/CPAN/Maker/: Constants.pm.in
src/main/perl/lib/CPAN/Maker/Role/: ModuleUtils.pm.in
